k8s/b2b-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: b2b-client
  name: b2b-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: b2b-client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: b2b-client
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: b2b-client--env
          image: madamski52081/b2b-client:latest
          name: b2b-client
          ports:
            - containerPort: 3003
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: b2b-client-cm0
      restartPolicy: Always
      volumes:
        - name: b2b-client-cm0
          configMap:
            name: b2b-client-cm0
