k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: mydb
            - name: POSTGRES_PASSWORD_FILE
              value: /run/secrets/db-password
            - name: POSTGRES_USER
              value: user
          image: postgres:15
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user
                - -d
                - mydb
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /run/secrets/db-password
              name: db-password
              subPath: db-password
            - mountPath: /var/lib/postgresql/data
              name: db-data
            - mountPath: /docker-entrypoint-initdb.d/backup.sql
              name: db-cm0
              subPath: backup.sql
      restartPolicy: Always
      volumes:
        - name: db-password
          secret:
            items:
              - key: db-password
                path: db-password
            secretName: db-password
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: db-cm0
          configMap:
            items:
              - key: backup.sql
                path: backup.sql
            name: db-cm0
