k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --hostname-strict=false
            - --proxy-headers=xforwarded
            - --hostname-url=http://projekttb.local/auth
            # - --spi-script-upload-enabled=true
            - --import-realm
          image: quay.io/keycloak/keycloak:24.0.1
          # livenessProbe:
          #   httpGet:
          #     path: /auth/realms/master
          #     port: 8080
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
          #   initialDelaySeconds: 10
          #   periodSeconds: 5
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: keycloak-data
            - mountPath: /opt/keycloak/data/import
              name: keycloak-cm1
      restartPolicy: Always
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data
        - configMap:
            name: keycloak-cm1
          name: keycloak-cm1
