k8s/spa-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-client
  labels:
    io.kompose.service: spa-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spa-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: spa-client
    spec:
      containers:
        - name: spa-client
          image: madamski52081/spa-client:latest
          workingDir: /app
          command: ["sh", "-c", "cp /app/.env /app/.env.local && npm run dev"]
          ports:
            - containerPort: 3000
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3002
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3002
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   failureThreshold: 3
          volumeMounts:
            - mountPath: /app/config
              name: spa-client-cm0
            - mountPath: /app/.env
              name: spa-client-env
              subPath: .env
      restartPolicy: Always
      volumes:
        - name: spa-client-cm0
          configMap:
            name: spa-client-cm0
        - name: spa-client-env
          configMap:
            name: spa-client-cm0
