k8s/ssr-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssr-client
  labels:
    io.kompose.service: ssr-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ssr-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: ssr-client
    spec:
      containers:
        - name: ssr-client
          image: madamski52081/ssr-client:latest
          workingDir: /app
          command: ["sh", "-c", "npm run start"]
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: ssr-client-cm0
            - mountPath: /app/.env
              name: ssr-client-env
              subPath: .env
      restartPolicy: Always
      volumes:
        - name: ssr-client-cm0
          configMap:
            name: ssr-client-cm0
        - name: ssr-client-env
          configMap:
            name: ssr-client-cm0
