k8s/test-serviceaccount-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-serviceaccount-mount
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
  automountServiceAccountToken: true
