k8s/spa-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: spa-client
  name: spa-client
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3000
  selector:
    io.kompose.service: spa-client
