k8s/ssr-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: ssr-client
  name: ssr-client
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ssr-client
