k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projekttb-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: projekttb.local
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: ssr-client
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spa-client
            port:
              number: 3002
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /auth/callback
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /b2b
        pathType: Prefix
        backend:
          service:
            name: b2b-client
            port:
              number: 3003
